    run GETs on a site at the same time, one will display a "please wait"
    page for a configurable number of seconds, which then redirects to retry.
    To enable this protection, set cgi_overload_delay to the number of
    seconds to wait. This is not enabled by default.
  * Add back a 1em margin between archivepage divs.

 -- Joey Hess <joeyh@debian.org>  Thu, 30 Aug 2012 11:56:12 -0400

ikiwiki (3.20120725) unstable; urgency=low

  * recentchangesdiff: When diffurl is not set, provide inline diffs
    in the recentchanges page, with visibility toggleable via javascript.
    Thanks, Antoine Beaupré
  * Split CFLAGS into words when building wrapper. Closes: #682237
  * osm: Avoid calling urlto before generated files are registered.
    Thanks, Philippe Gauthier and Antoine Beaupré
  * osm: Add osm_openlayers_url configuration setting.
    Thanks, Genevieve
  * osm: osm_layers can be used to configured the layers displayed on the map.
    Thanks, Antoine Beaupré
  * comments: Remove ipv6 address specific code.

 -- Joey Hess <joeyh@debian.org>  Sat, 25 Aug 2012 10:58:42 -0400

ikiwiki (3.20120629) unstable; urgency=low

  * mirrorlist: Add mirrorlist_use_cgi setting that avoids usedirs or
    other config differences by linking to the mirror's CGI. (intrigeri)

 -- Joey Hess <joeyh@debian.org>  Fri, 29 Jun 2012 10:16:08 -0400

ikiwiki (3.20120516) unstable; urgency=high

  * meta: Security fix; add missing sanitization of author and authorurl.
    CVE-2012-0220 Thanks, Raúl Benencia

 -- Joey Hess <joeyh@debian.org>  Wed, 16 May 2012 19:51:27 -0400

ikiwiki (3.20120419) unstable; urgency=low

  * Remove dead link from plugins/teximg. Closes: #664885
  * inline: When the pagenames list includes pages that do not exist, skip
    them.
  * meta: Export author information in html <meta> tag. Closes: #664779
    Thanks, Martin Michlmayr
  * notifyemail: New plugin, sends email notifications about new and 
    changed pages, and allows subscribing to comments.