@@ -9,9 +9,11 @@
 <div id="change-<TMPL_VAR REV>" class="metadata">
 <span class="desc"><br />Changed pages:</span>
 <span class="pagelinks">
+<TMPL_UNLESS HAS_DIFFURL>
 <TMPL_IF DIFF>
 <a href="#diff-<TMPL_VAR REV>" class="toggle" title="diff" rel="nofollow">[[diff|wikiicons/diff.png]]</a>
 </TMPL_IF>
+</TMPL_UNLESS>
 <TMPL_LOOP PAGES>
 <TMPL_IF DIFFURL><a href="<TMPL_VAR DIFFURL>" title="diff" rel="nofollow">[[diff|wikiicons/diff.png]]</a><TMPL_VAR LINK>
 <TMPL_ELSE><TMPL_VAR LINK></TMPL_IF>
@@ -41,7 +43,7 @@
 </TMPL_IF>
 </TMPL_LOOP>
 </div>
-<TMPL_UNLESS DIFFURL>
+<TMPL_UNLESS HAS_DIFFURL>
 <TMPL_IF DIFF>
 <div class="toggleable" id="diff-<TMPL_VAR REV>">
 <pre>
