@@ -12,6 +12,9 @@ ikiwiki (3.20120726) UNRELEASED; urgency=low
     To enable this protection, set cgi_overload_delay to the number of
     seconds to wait. This is not enabled by default.
   * Add back a 1em margin between archivepage divs.
+  * recentchangesdiff: Correct broken template that resulted in duplicate
+    diff icons being displayed, and bloated the recentchanges page with
+    inline diffs when the configuration should have not allowed them.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 30 Aug 2012 11:56:12 -0400
 
